--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ navigation-compose = "2.7.6"
 google-services = "4.4.2"
 material3 = "1.4.0"
 foundation = "1.9.5"
+firebaseCrashlyticsBuildtools = "3.0.6"
 
 [libraries]
 # Tes libs actuelles (on les garde)
@@ -60,6 +61,7 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version = "1.3.0
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.7.0" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
